[gd_scene load_steps=6 format=3 uid="uid://r3m0cdc7ro1x"]

[ext_resource type="Script" uid="uid://dv4q32fo3scfm" path="res://enemies/caster/enemy_caster.gd" id="1_31881"]
[ext_resource type="Texture2D" uid="uid://bcygglls5enwu" path="res://enemies/caster/corrupted_mage.png" id="2_stylf"]
[ext_resource type="PackedScene" uid="uid://b14khyssldpgk" path="res://scenes/health_bar.tscn" id="3_5ixot"]
[ext_resource type="PackedScene" uid="uid://c5xeltgbeoosb" path="res://shaders/sprite_flasher.tscn" id="4_eihqj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ixot"]
radius = 13.0
height = 60.0

[node name="EnemyCaster" type="CharacterBody2D" groups=["Enemy"]]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_31881")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_stylf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_5ixot")

[node name="HealthBar" parent="." instance=ExtResource("3_5ixot")]
offset_left = -18.0
offset_top = -47.0
offset_right = -18.0
offset_bottom = -47.0
scale = Vector2(0.36, 0.36)

[node name="SpriteFlasher" parent="." instance=ExtResource("4_eihqj")]

[node name="AttackTimer" type="Timer" parent="."]
